Shipment & Inventory API Updates
- Updated Travis script to run ERP locally for unit tests - #126
-API updates and unit tests:
  - `GET retailers/{id}/inventory` - #127
  - `GET distribution-centers/{id}/inventory` - #128
  - `GET distribution-centers/{id}/shipments` & filters for `GET /shipments` - #129
  - `GET /shipments/{id}` now returns `LineItems` with the `Shipment` - #130 
- Unit test to check for exceptions on invalid status updates - #131
